# BEVNET_NAV2_WS

./: .gitignore  README.md  check_mcap_topics.py  docker_run.sh  how2use.md  inspect_mcap.py  mcap_player_working.py  requirements.txt  run_bevnet_standalone.py  run_mcap_playback.py  save_results_simple.py  save_visualization.py  setup_remaining.sh  str.md  test_bevnet_ros2.py
docker/: Dockerfile  Dockerfile.humble  docker-compose.yaml  entrypoint.sh
log/: latest_list
scripts/: run_bevnet_in_docker.sh  setup_bevnet_nav2.sh  setup_environment.sh
src/bevnet_nav2/: CMakeLists.txt  package.xml
src/bevnet_nav2/config/: nav2_params.yaml
src/bevnet_nav2/launch/: bevnet_inference.launch.py
src/bevnet_nav2/scripts/: bevnet_inference_node.py  bevnet_ros2_node.py
src/bevnet_nav2_bringup/: CMakeLists.txt  package.xml
src/bevnet_nav2_bringup/config/: bevnet_params.yaml  nav2_params.yaml  rviz_config.rviz
src/bevnet_nav2_bringup/launch/: bevnet_nav2.launch.py  simulation.launch.py  visualization.launch.py
src/bevnet_nav2_bringup/maps/: test_map.yaml
src/bevnet_nav2_core/: CMakeLists.txt  package.xml  plugins.xml  setup.py
src/bevnet_nav2_core/bevnet_nav2_core/: bevnet_inference_node.py  costmap_fusion.py  path_visualizer.py
src/bevnet_nav2_core/include/bevnet_nav2_core/: bevnet_costmap_layer.hpp
src/bevnet_nav2_core/src/: bevnet_controller.cpp  bevnet_costmap_layer.cpp
src/bevnet_nav2_msgs/: CMakeLists.txt  package.xml
src/bevnet_nav2_msgs/msg/: BEVMap.msg  SemanticCostmap.msg
src/bevnet_nav2_msgs/srv/: UpdateBEVNetWeights.srv
src/gps_waypoint_nav/: package.xml  setup.cfg  setup.py
src/gps_waypoint_nav/config/: gps_waypoint_params.yaml
src/gps_waypoint_nav/gps_waypoint_nav/: gps_extractor.py  gps_path_publisher.py
src/gps_waypoint_nav/launch/: gps_waypoint_nav.launch.py
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/install/mcap_replay/lib/mcap_replay/: mcap_player.py
src/install/mcap_replay/share/ament_index/resource_index/package_run_dependencies/: mcap_replay
src/install/mcap_replay/share/ament_index/resource_index/parent_prefix_path/: mcap_replay
src/install/mcap_replay/share/mcap_replay/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/install/mcap_replay/share/mcap_replay/cmake/: mcap_replayConfig-version.cmake  mcap_replayConfig.cmake
src/install/mcap_replay/share/mcap_replay/environment/: ament_prefix_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
src/log/: latest_build
src/mcap_replay/: CMakeLists.txt  package.xml  setup.py
src/mcap_replay/launch/: mcap_player.launch.py
src/mcap_replay/mcap_replay/: data_synchronizer  data_synchronizer.py  kitti_converter  kitti_converter.py  mcap_player  mcap_player.py  mcap_player_mcap.py  mcap_player_original.py
