<?xml version="1.0"?>
<package format="3">
  <name>mcap_replay</name>
  <version>0.1.0</version>
  <description>MCAP data replay for BEVNet Nav2 system</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>std_msgs</depend>

  <exec_depend>python3-mcap</exec_depend>
  <exec_depend>python3-mcap-ros2-support</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>